Added a footer with styling

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -5,20 +5,20 @@
   -o-background-size: cover;
   background-size: cover;
 }*/
-.well {
+/* ----------- MIXINS ----------- */
+.box {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
   padding: 60px 0 60px 0;
   margin: 30px;
   text-align: center;
+  font-weight: bold;
   font-size: 4.5em;
   color: white;
   background-color: black;
   opacity: 0.7;
   font-family: 'Avenir Next'; }
-
-.centered {
-  position: fixed;
-  /* or absolute */
-  top: 10%;
-  left: 15%; }
 
 /*# sourceMappingURL=style.css.map */
