--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -6,20 +6,26 @@
   background-size: cover;
 }*/
 
-.well {
+/* ----------- MIXINS ----------- */
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
+
+
+
+.box { 
+	@include border-radius(10px); 
 	padding: 60px 0 60px 0;
 	margin: 30px;
 	text-align: center;
+	font-weight: bold;
 	font-size: 4.5em;
 	color: white;
 	background-color: black;
 	opacity: 0.7;
 	font-family: 'Avenir Next';
-}
-
-.centered {
-  position: fixed; /* or absolute */
-  top: 10%;
-  left: 15%;
-
 }
