--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="container centered">
-	<div class="well"><b>PROJEKT</b></div>
-	<div class="well">TIDSRAPPORTERING</div>
-	<div class="well">KUNDER</div>
+	<div class="well box text-uppercase">projekt</div>
+	<div class="well box text-uppercase">tidsrapportering</div>
+	<div class="well box text-uppercase">kunder</div>
 </div>
