--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="container centered">
-	<div class="well box text-uppercase">projekt</div>
-	<div class="well box text-uppercase">tidsrapportering</div>
-	<div class="well box text-uppercase">kunder</div>
+	<div class="well box text-uppercase expand">projekt</div>
+	<div class="well box locked text-uppercase">tidsrapportering</div>
+	<div class="well box locked text-uppercase">kunder</div>
 </div>
